feat: add search api for videos
